Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,25 +22,23 @@
       <h3>
 <a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span class="octicon octicon-link"></span></a>Introduction</h3>
 
+<p>To learn more about the AI field of natural language processing, I created a website that uses these tools and techniques to find process a middle school exam question and try to find the answer on the wikipedia. </p>
+
 <h3>
 <a id="so-what-is-this" class="anchor" href="#so-what-is-this" aria-hidden="true"><span class="octicon octicon-link"></span></a>So What is This?</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>This is a question answering system for middle school exam questions.  It specifically seeks to find answers to who, where and when questions.  It is implemented on the website muledeerhunter73.pythonanywhere.com. </p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="why-did-i-do-this" class="anchor" href="#why-did-i-do-this" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why did I do this?</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>Natural Language Processing fascinates me in that it allows computers in a sense to understand humans. I did this project to get my toes in the water of how natural language processing works.  Answers to middle school exam questions are abundant on the web, but it can be difficult to find them in all the content. </p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>GitHub Profile Name: muledeerhunter73
+Hadley Westover</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/muledeerhunter73/QuestionAnswering">Middle School Question Solver</a> is maintained by <a href="https://github.com/muledeerhunter73">muledeerhunter73</a>.</span>
