Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <h3>
 <a id="so-what-is-this" class="anchor" href="#so-what-is-this" aria-hidden="true"><span class="octicon octicon-link"></span></a>So What is This?</h3>
 
-<p>This is a question answering system for middle school exam questions.  It specifically seeks to find answers to who, where and when questions.  It is implemented on the website <a href=http://muledeerhunter73.pythonanywhere.com> muledeerhunter73.pythonanywhere.com.</a> </p>
+<p>This is a question answering system for middle school exam questions.  It specifically seeks to find answers to who, where and when questions.  It is implemented on the website [muledeerhunter73.pythonanywhere.com(<a href="http://muledeerhunter73.pythonanywhere.com">http://muledeerhunter73.pythonanywhere.com</a>). </p>
 
 <h3>
 <a id="why-did-i-do-this" class="anchor" href="#why-did-i-do-this" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why did I do this?</h3>
