Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
       <h3>
 <a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span class="octicon octicon-link"></span></a>Introduction</h3>
 
-<p>To learn more about the AI field of natural language processing, I created a website that uses these tools and techniques to find process a middle school exam question and try to find the answer on the wikipedia. </p>
+<p>To learn more about the AI field of natural language processing, I created a website that uses nlp tools and techniques to process a middle school exam question and try to find the answer on wikipedia. </p>
 
 <h3>
 <a id="so-what-is-this" class="anchor" href="#so-what-is-this" aria-hidden="true"><span class="octicon octicon-link"></span></a>So What is This?</h3>
 
-<p>This is a question answering system for middle school exam questions.  It specifically seeks to find answers to who, where and when questions <a href="http://muledeerhunter73.pythonanywhere.com">muledeerhunter73.pythonanywhere.com</a>. </p>
+<p>This is a question answering system for middle school exam questions.  It specifically seeks to find answers to who, where and when questions. It is put together on an interactive website for users to access. The link to the website is included below. <a href="http://muledeerhunter73.pythonanywhere.com">muledeerhunter73.pythonanywhere.com</a>. </p>
 
 <h3>
 <a id="why-did-i-do-this" class="anchor" href="#why-did-i-do-this" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why did I do this?</h3>
 
-<p>Natural Language Processing fascinates me in that it allows computers in a sense to understand humans. I did this project to get my toes in the water of how natural language processing works.  Answers to middle school exam questions are abundant on the web, but it can be difficult to find them in all the content. </p>
+<p>Natural Language Processing fascinates me in that it allows computers in a sense to understand humans. I did this project to get my toes in the water of how natural language processing works.  Answers to middle school exam questions are abundant on the web, but they can be difficult to find in all the web content.  I decided to do this to try to get the computer to find the answer for me.</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
