Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h3>
 <a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span class="octicon octicon-link"></span></a>Introduction</h3>
 
-<p>To learn more about the AI field of natural language processing, I created a website that uses nlp tools and techniques to process a middle school exam question and try to find the answer on wikipedia. </p>
+<p>To learn more about the AI field of natural language processing, I created a website that uses nlp tools and techniques to process a middle school exam history question and try to find the article with the answer on Wikipedia. </p>
 
 <h3>
 <a id="so-what-is-this" class="anchor" href="#so-what-is-this" aria-hidden="true"><span class="octicon octicon-link"></span></a>So What is This?</h3>
