Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     </section>
 
     <section class="main-content">
-      <h3>
+      <h1>
+<a id="can-a-computer-be-smarter-than-a-fifth-grader" class="anchor" href="#can-a-computer-be-smarter-than-a-fifth-grader" aria-hidden="true"><span class="octicon octicon-link"></span></a>Can a Computer Be Smarter Than a Fifth Grader?</h1>
+
+<h3>
 <a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span class="octicon octicon-link"></span></a>Introduction</h3>
 
 <p>To learn more about the AI field of natural language processing, I created a website that uses nlp tools and techniques to process a middle school exam history question and try to find the article with the answer on Wikipedia. </p>
