Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,17 +12,14 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Middle School Question Solver</h1>
-      <h2 class="project-tagline">Question Solver</h2>
+      <h2 class="project-tagline">Can a Computer Be Smarter Than a Fifth Grader?</h2>
       <a href="https://github.com/muledeerhunter73/QuestionAnswering" class="btn">View on GitHub</a>
       <a href="https://github.com/muledeerhunter73/QuestionAnswering/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/muledeerhunter73/QuestionAnswering/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
-      <h1>
-<a id="can-a-computer-be-smarter-than-a-fifth-grader" class="anchor" href="#can-a-computer-be-smarter-than-a-fifth-grader" aria-hidden="true"><span class="octicon octicon-link"></span></a>Can a Computer Be Smarter Than a Fifth Grader?</h1>
-
-<h3>
+      <h3>
 <a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span class="octicon octicon-link"></span></a>Introduction</h3>
 
 <p>To learn more about the AI field of natural language processing, I created a website that uses nlp tools and techniques to process a middle school exam history question and try to find the answer from Wikipedia.  Currently it returns the Wikipedia article with the answer, but I am working at having the system find the answer in the article.</p>
