Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 
 <ol>
 <li>When were the moon landings?</li>
-<li>Who wrote the United States Declaration of Independence</li>
-<li>
+<li>Who wrote the United States Declaration of Independence?</li>
+<li>Where is Mount Rushmore?</li>
 </ol>
 
 <h3>
