--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 <h3>
 <a id="issues-and-limitations" class="anchor" href="#issues-and-limitations" aria-hidden="true"><span class="octicon octicon-link"></span></a>Issues and Limitations</h3>
 
-<p>The system sometimes does not return the correct article. I have been having family and friends test the system so that I can try to find out why it returned the incorrect article and how I can improve it.
-I also have been trying to setup the system to find the answer.  There are great tools out there that can extract named entities such as names and locations.  The issue I have been having is getting these tools integrated into the site I am hosting. <a href="https://www.pythonanywhere.com/">Pythonanywhere</a> is strictly python and many of these tools are written in other languages and include a python interface.</p>
+<p>The system sometimes does not return the correct article. I have been having family and friends test the system so that I can try to find out why it returned the incorrect article and how I can improve it.</p>
+<p></p>I also have been trying to setup the system to find the answer.  There are great tools out there that can extract named entities such as names and locations.  The issue I have been having is getting these tools integrated into the site I am hosting. <a href="https://www.pythonanywhere.com/">Pythonanywhere</a> is strictly python and many of these tools are written in other languages and include a python interface.</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
